# whir-p3-metal

./: Cargo.toml  README.md  sweep_results.txt  sweep_results_opt18.txt  sweep_results_opt21.txt
benches/: dft_gpu.rs
docs/: client-side-gpu-proving.md  ethresearch-client-side-gpu-proving.md  gpu-optimizations.md
p3-merkle-tree-patched/src/: merkle_tree.rs
shaders/: babybear_ntt.metal
src/: gpu_dft.rs  lib.rs
src/whir/: mod.rs
src/whir/committer/: reader.rs  writer.rs
src/whir/prover/: mod.rs
src/whir/prover/round_state/: tests.rs
